# aw-watcher-plex

./: LICENSE  README.md  pyproject.toml
aw_watcher_plex/: main.py
tests/: test_main.py
